fix: article out of bounds

--- a/source/css/_common/_normalize.scss
+++ b/source/css/_common/_normalize.scss
@@ -232,6 +232,7 @@ pre,
 samp {
   font-family: monospace, monospace;
   font-size: 1em;
+  word-wrap: break-word;
 }
 
 /* Forms
