--- a/source/css/_partial/_post/_copyright.scss
+++ b/source/css/_partial/_post/_copyright.scss
@@ -8,6 +8,7 @@
 
     a {
       color: $theme-color;
+      word-wrap: break-word;
     }
   }
 }
